[metadata]
name = docsgen
description = A markdown template manager for writing API docs in python.
author = Ethan Evans
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    docsgen

python_requires =
    >=3.7
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0